# rai-rosbot-xl-demo

./: .gitignore  .gitmodules  LICENSE.txt  README.md  build_mono_sdk.sh  run-editor.sh  run-game-bundled.bash  run-game-exported.bash  run-game.bash  run-game.sh  run-nav.bash  run-nav.sh  run-rviz.bash  run-rviz.sh  setup_submodules.bash
Examples/navigation/: .env  compose.yaml
Examples/navigation/config/: layout.json  navigation_params.yaml  navigation_params_humble.yaml  navigation_params_jazzy.yaml
Project/: CMakeLists.txt  project.json
Project/Gem/: CMakeLists.txt  gem.json  raihusariondemo_files.cmake  raihusariondemo_shared_files.cmake
Project/Gem/Include/RAIHusarionDemo/: RAIHusarionDemoBus.h  RAIHusarionDemoTypeIds.h
Project/Gem/Platform/Mac/: PAL_mac.cmake
Project/Gem/Registry/: assetprocessor_settings.setreg
Project/Gem/Source/: RAIHusarionDemoModule.cpp  RAIHusarionDemoSystemComponent.cpp  RAIHusarionDemoSystemComponent.h
Project/Platform/Android/: android_project.json
Project/Resources/Platform/Mac/: Info.plist
docker/: Dockerfile
docs/: o3de.md
patches/: LEDStrip.cpp  LEDStrip.h  husarion.seed  updates.patch
src/led_strip/led_strip/: led_strip_node.py
src/manipulation/: CMakeLists.txt  package.xml
src/manipulation/include/robotic_manipulation/: arm_controller.h  rosbot_controller.h
src/manipulation/src/: arm_controller.cpp  manipulation.cpp  rosbot_controller.cpp
src/rosbot_xl_whoami/: LICENSE  package.xml  setup.cfg  setup.py
src/rosbot_xl_whoami/description/: index.faiss  index.pkl  robot_identity.txt
(+1 files in other folders)
